--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
        <dependency>
            <groupId>org.apache.sling</groupId>
            <artifactId>org.apache.sling.provisioning.model</artifactId>
-           <version>1.8.1-SNAPSHOT</version>
+           <version>1.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven</groupId>
