--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-    <!--
-        Licensed to the Apache Software Foundation (ASF) under one or more contributor license
-        agreements. See the NOTICE file distributed with this work for additional information
-        regarding copyright ownership. The ASF licenses this file to you under the Apache License,
-        Version 2.0 (the "License"); you may not use this file except in compliance with the
-        License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
+<!--
+    Licensed to the Apache Software Foundation (ASF) under one or more contributor license
+    agreements. See the NOTICE file distributed with this work for additional information
+    regarding copyright ownership. The ASF licenses this file to you under the Apache License,
+    Version 2.0 (the "License"); you may not use this file except in compliance with the
+    License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 
-        Unless required by applicable law or agreed to in writing, software distributed under the
-        License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
-        either express or implied. See the License for the specific language governing permissions
-        and limitations under the License.
-    -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    Unless required by applicable law or agreed to in writing, software distributed under the
+    License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+    either express or implied. See the License for the specific language governing permissions
+    and limitations under the License.
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
         <version>29</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <artifactId>slingstart-maven-plugin</artifactId>
@@ -65,8 +66,8 @@
                         <goals>
                             <goal>descriptor</goal>
                         </goals>
-                     </execution>
-                     <execution>
+                    </execution>
+                    <execution>
                         <id>generated-helpmojo</id>
                         <goals>
                             <goal>helpmojo</goal>
@@ -74,23 +75,23 @@
                     </execution>
                 </executions>
                 <configuration>
-                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-                 </configuration>
+                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
     <dependencies>
-       <dependency>
-           <groupId>org.apache.sling</groupId>
-           <artifactId>org.apache.sling.provisioning.model</artifactId>
-           <version>1.8.0</version>
-       </dependency>
-       <dependency>
-           <groupId>org.apache.maven</groupId>
-           <artifactId>maven-core</artifactId>
-           <version>${maven.version}</version>
-       </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.provisioning.model</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>${maven.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
@@ -112,7 +113,12 @@
             <version>3.4</version>
             <scope>provided</scope>
         </dependency>
-      <!-- We use a class from the config admin implementation to read config files -->
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-interactivity-api</artifactId>
+            <version>1.0-alpha-6</version>
+        </dependency>
+        <!-- We use a class from the config admin implementation to read config files -->
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.configadmin</artifactId>
@@ -171,9 +177,9 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        
-        <!-- The following artifacts are purely used by the unit tests 
-             so these dependencies ensures that they are in the .m2 directory -->
+
+        <!-- The following artifacts are purely used by the unit tests
+            so these dependencies ensures that they are in the .m2 directory -->
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.classloader</artifactId>
