--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.provisioning.model</artifactId>
-            <version>1.8.3-SNAPSHOT</version>
+            <version>1.8.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
