SLING-7083 - The StopMojo should block until the process is finished
* allowed the mojo to uniformly block until the instances it tries to stop
are either stopped through the control listener or through sending the
terminate signal
* enforced Java 8, since its java.util.concurrent.Process implementation
provides built-in feature for blocking until a process is terminated

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1806025 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <properties>
         <maven.version>3.0.5</maven.version>
         <maven.site.path>${project.artifactId}-archives/${project.artifactId}-LATEST</maven.site.path>
+        <sling.java.version>8</sling.java.version>
     </properties>
 
     <scm>
@@ -51,6 +52,27 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-java</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireJavaVersion>
+                                    <message>${project.name} must be compiled with Java 1.8 or higher.</message>
+                                    <version>1.${sling.java.version}.0</version>
+                                </requireJavaVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-component-metadata</artifactId>
