--- a/pom.xml
+++ b/pom.xml
@@ -37,16 +37,16 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/trunk/tooling/maven/slingstart-maven-plugin</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/trunk/tooling/maven/slingstart-maven-plugin</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/trunk/tooling/maven/slingstart-maven-plugin</url>
+        <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</conncetion>
+        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</developerConnection>
+        <url>https://gitbox.apache.org/repos/asf?p=sling-slingstart-maven-plugin.git</url>
     </scm>
 
     <!-- Support for publishing the mvn site. -->
     <distributionManagement>
         <site>
             <id>apache.website</id>
-            <url>scm:svn:https://svn.apache.org/repos/asf/sling/site/trunk/content/components/${maven.site.path}</url>
+            <url>https://gitbox.apache.org/repos/asf?p=sling-slingstart-maven-plugin.git</url>
         </site>
     </distributionManagement>
 
