--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- for https://issues.apache.org/jira/browse/SUREFIRE-1067 -->
+                <version>2.20.1</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <!-- for https://issues.apache.org/jira/browse/SUREFIRE-855 -->
                 <version>2.20.1</version>
