--- a/pom.xml
+++ b/pom.xml
@@ -251,7 +251,8 @@
         </dependency>
 
         <!-- The following artifacts are purely used by the unit tests
-            so these dependencies ensures that they are in the .m2 directory -->
+            so these dependencies ensures that they are in the .m2 directory prior to executing the tests.
+            Whenever you modify these, you must also modify the references in org.apache.sling.maven.slingstart.PreparePackageMojoTest! -->
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.commons.classloader</artifactId>
