SLING-7689 Conversion feature model to provisioning model files should only consider .json files

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
                 <configuration>
                     <excludes>
                         <exclude>src/site/markdown/**</exclude>
+                        <exclude>src/test/resources/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
