--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </parent>
 
     <artifactId>slingstart-maven-plugin</artifactId>
-    <version>1.8.1-SNAPSHOT</version>
+    <version>1.8.2</version>
     <packaging>maven-plugin</packaging>
 
     <name>Apache Sling SlingStart Maven Plugin</name>
@@ -41,7 +41,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-slingstart-maven-plugin.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-slingstart-maven-plugin.git</url>
-      <tag>HEAD</tag>
+      <tag>slingstart-maven-plugin-1.8.2</tag>
   </scm>
 
     <!-- Support for publishing the mvn site. -->
